--- a/my-app/public/prospects.html
+++ b/my-app/public/prospects.html
@@ -8,14 +8,52 @@
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Web site created using create-react-app" />
 	<link rel="apple-touch-icon" />
-
-	<link rel="manifest" />
+	<link>
+	<link rel="stylesheet" href="prospects.css">
 
 	<title>Перспективы</title>
 </head>
 
 <body>
-	<h1>Перспективы развития Новой Анапы</h1>
+	<div class="container-prospects">
+		<div class="back">
+			<a href="index.html">назад</a>
+		</div>
+		<h1>Перспективы развития Новой Анапы</h1>
+
+
+
+
+
+		<div class="prospects-grid">
+			<div class="prospect-card">
+				<h2>Туристическая инфраструктура</h2>
+				<p>Развитие современных курортных комплексов, строительство новых отелей и оздоровительных центров.
+					Создание
+					уникальных туристических маршрутов и развлекательных зон.</p>
+			</div>
+
+			<div class="prospect-card">
+				<h2>Транспортная доступность</h2>
+				<p>Модернизация транспортной системы, включая расширение аэропорта и строительство новых дорог.
+					Улучшение
+					городской мобильности.</p>
+			</div>
+
+			<div class="prospect-card">
+				<h2>Городская среда</h2>
+				<p>Создание современных общественных пространств, парков и набережных. Развитие экологичной и
+					комфортной
+					городской среды.</p>
+			</div>
+
+			<div class="prospect-card">
+				<h2>Экономическое развитие</h2>
+				<p>Привлечение инвестиций в развитие региона, создание новых рабочих мест и поддержка малого бизнеса.
+				</p>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
